# jolt-wasm-prover

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  README.md  bench.mjs  package-lock.json  package.json  rust-toolchain.toml  server.mjs  test-verify.mjs  trace-capture.mjs  typos.toml  wrangler.toml
.cargo/: config.toml
frontend/: index.html  package-lock.json  vite.config.ts
frontend/public/: _headers  _redirects  ecdsa.elf  keccak.elf  sha2.elf  worker.js
frontend/src/: app.tsx  index.css
frontend/src/components/: keccak-inputs.tsx  output-log.tsx  program-panel.tsx  sha2-inputs.tsx  status-badge.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/hooks/: use-prover.ts
frontend/src/lib/: constants.ts  types.ts  worker-client.ts
guests/secp256k1/: Cargo.toml
guests/sha2/: Cargo.toml
guests/sha2/src/: lib.rs
guests/sha3-chain/: Cargo.toml
preprocessing/: generate.rs  test_roundtrip.rs
scripts/: build-pages.sh
src/: lib.rs  wasm_tracing.rs
www/: ecdsa.elf  index.html  index.js  keccak.elf  sha2.elf  worker.js
