[package]
name = "jolt-wasm-prover"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["guests/sha2", "guests/secp256k1", "guests/sha3-chain"]

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "generate-preprocessing"
path = "preprocessing/generate.rs"
required-features = ["native"]

[[bin]]
name = "test-roundtrip"
path = "preprocessing/test_roundtrip.rs"
required-features = ["native"]

[features]
default = []
native = [
    "jolt-core/host",
    "jolt-inlines-sha2/host",
    "jolt-inlines-secp256k1/host",
    "jolt-inlines-keccak256/host",
]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = "1.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2.16", features = ["js"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["use-std"] }

jolt-core = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", default-features = false, features = ["prover"] }
tracer = { git = "https://github.com/a16z/jolt", branch = "wasm-clean" }
common = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["std"] }
ark-bn254 = { path = "../arkworks-algebra/curves/bn254" }
ark-serialize = { path = "../arkworks-algebra/serialize" }

jolt-inlines-sha2 = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["host"] }
jolt-inlines-secp256k1 = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["host"] }
jolt-inlines-keccak256 = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["host"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jolt-sdk = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["host"] }
sha2-guest = { path = "guests/sha2" }
secp256k1-ecdsa-verify-guest = { path = "guests/secp256k1" }
sha3-chain-guest = { path = "guests/sha3-chain" }

[patch.crates-io]
ark-bn254 = { path = "../arkworks-algebra/curves/bn254" }
ark-ff = { path = "../arkworks-algebra/ff" }
ark-ec = { path = "../arkworks-algebra/ec" }
ark-serialize = { path = "../arkworks-algebra/serialize" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

[patch.'https://github.com/a16z/dory']
dory-pcs = { path = "../dory" }
dory-derive = { path = "../dory/derive" }

[patch.'https://github.com/a16z/arkworks-algebra']
ark-bn254 = { path = "../arkworks-algebra/curves/bn254" }
ark-grumpkin = { path = "../arkworks-algebra/curves/grumpkin" }
ark-secp256k1 = { path = "../arkworks-algebra/curves/secp256k1" }
ark-ff = { path = "../arkworks-algebra/ff" }
ark-ec = { path = "../arkworks-algebra/ec" }
ark-serialize = { path = "../arkworks-algebra/serialize" }
ark-poly = { path = "../arkworks-algebra/poly" }
jolt-optimizations = { path = "../arkworks-algebra/jolt-optimizations" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
