[package]
name = "secp256k1-ecdsa-verify-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", branch = "wasm-clean" }
jolt-inlines-secp256k1 = { git = "https://github.com/a16z/jolt", branch = "wasm-clean" }
